# TaskVerse

./: .gitignore  README.md  SETUP.md  automate_workflow.py  email_workflow.json  gmail_mock.html  logs.txt  main.py  pyproject.toml  recording.py  replay.py  requirements.txt
TaskVerse-main/flow-state-marketplace/public/: d3-graph.html
api/runWorkFlow/: route.js
flow-state-marketplace/: README.md  index.html
flow-state-marketplace/public/: d3-graph.html
flow-state-marketplace/src/: App.tsx
flow-state-marketplace/src/components/: AIPatternRecognition.tsx  ExecutionEngine.tsx  LinkedInWorkflowGraph.tsx  Navbar.tsx  WorkflowGraph.tsx
flow-state-marketplace/src/data/: linkedinWorkflow.ts
flow-state-marketplace/src/pages/: About.tsx  GraphEditor.tsx  Home.tsx  Index.tsx  Marketplace.tsx
mcp-server/: index copy 2.js  index copy.js  package-lock.json  package.json  server-helper.js
runner/: dynamic-runner copy.js  dynamic-runner.js  gpt-runner.js  mcp-runner.js  package-lock.json  package.json  planWithGPT.js  run-workflow.js
runner/utils/: extractSelectorWithGPT copy.js  extractSelectorWithGPT.js  extractTargetWithGPT copy.js  fixWithGPT.js
session_data/: events.jsonl  metadata.json
workflows/: final-execution-plan.json  intent.json  linkedin-try.json  linkedin.json  sample-login.json  search-google.json  search-yahoo.json  summary.json  task-intent.json  task-yahoo.json
